<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >




            <Button
                android:id="@+id/buttonMedidas"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="200dp"
                android:text="@string/painelMedidas"
                android:textStyle="bold" />


            <Button
                android:id="@+id/buttonalergia"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"

                android:text="@string/painel_alergia"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttondieta"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/painel_dieta"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonIMC"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/IMC"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>





</android.support.constraint.ConstraintLayout>
