<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:paddingRight="50dp"
    tools:context=".SegundaPagina">


    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:inputType="number"
        android:id = "@+id/txtPeso"
        android:hint = "@string/peso"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#000000"
        android:layout_marginTop = "46dp"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true" />


    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtPeso"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:textColorHint="#000000" />


    <Button
        android:id="@+id/btnCalcularOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAltura"
        android:layout_centerHorizontal="true"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"/>

</RelativeLayout>